[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stellar-insured-sdk"
version = "1.0.0"
description = "Python SDK for Stellar Insured Soroban contracts"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["stellar", "soroban", "insurance", "sdk"]
dependencies = [
    "stellar-sdk>=10.0.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
